Fix card button alignment in desktop wide screen

--- a/style.css
+++ b/style.css
@@ -30,8 +30,9 @@ body {
     color: aliceblue;
     font-size: 20px;
     display: grid;
-    grid-template-columns: 3fr 1fr 1fr;
+    grid-template-columns: 8fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+    gap: 5px;
     align-items: center;
 }
 
